file browser commit before computer crash

--- a/WebContent/WEB-INF/zul/crawler/file/browser.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/browser.zul
@@ -49,7 +49,7 @@
 
 	<separator />
 
-	<listbox itemRenderer="@{browser}" model="@{browser.fileItem.list}">
+	<listbox itemRenderer="@{browser}" model="@{browser.pathItem.list}">
 		<listhead>
 			<listheader label="Selection" />
 			<listheader label="With all sub-directories" />
