--- a/WebContent/WEB-INF/zul/crawler/file/browser.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/browser.zul
@@ -18,7 +18,7 @@
 <window id="browser"
 	use="com.jaeksoft.searchlib.web.controller.crawler.file.BrowserController">
 
-	<vbox>
+	<vbox width="100%">
 		<listbox model="@{browser.files}"
 			selectedItem="@{browser.selectedFile}">
 			<listhead>
