Tracker : Feature id 2812172  : To crawl files

--- a/WebContent/WEB-INF/zul/crawler/file/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/index.zul
@@ -1,6 +1,6 @@
 <tabbox>
 	<tabs>
-		<tab id="tabCrawlerFileBrowser" label="File & folder list" selected="true" />
+		<tab id="tabCrawlerFileBrowser" label="File and folder list" selected="true"  />
 		<tab id="tabCrawlerFileCrawled" label="File browser" />
 		<tab id="tabCrawlerFileCrawl" label="Crawl process" />
 		<tab id="tabCrawlerFileMapping" label="Field mapping" />
