--- a/WebContent/WEB-INF/zul/crawler/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/index.zul
@@ -1,16 +1,33 @@
+<?init class="org.zkoss.zkplus.databind.AnnotateDataBinderInit" ?>
+<!--
+	License Agreement for Jaeksoft OpenSearchServer
+	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+	http://www.open-search-server.com
+	This file is part of Jaeksoft OpenSearchServer.
+	Jaeksoft OpenSearchServer is free software: you can
+	redistribute it and/or modify it under the terms of the GNU General
+	Public License as published by the Free Software Foundation, either
+	version 3 of the License, or (at your option) any later version.
+	Jaeksoft OpenSearchServer is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	General Public License for more details. You should have received a
+	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
+	If not, see <http://www.gnu.org/licenses/>.
+-->
 <tabbox>
 	<tabs>
-		<tab id="tabWebCrawler" label="Web"  />
-
-		<tab id="tabFileCrawler" label="Files" selected="true"/>
-
+		<tab id="tabWebCrawler" label="Web" selected="true" />
+		<tab id="tabFileCrawler" label="Files" />
 	</tabs>
+
 	<tabpanels>
+
 		<tabpanel>
 			<include src="WEB-INF/zul/crawler/web/index.zul" />
 		</tabpanel>
 
-		<tabpanel>
+		<tabpanel fulfill="tabFileCrawler.onSelect">
 			<include src="WEB-INF/zul/crawler/file/index.zul" />
 		</tabpanel>
 
