--- a/WebContent/WEB-INF/zul/crawler/web/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/index.zul
@@ -1,6 +1,23 @@
+<!--
+	License Agreement for Jaeksoft OpenSearchServer
+	Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+	http://www.open-search-server.com
+	This file is part of Jaeksoft OpenSearchServer.
+	Jaeksoft OpenSearchServer is free software: you can
+	redistribute it and/or modify it under the terms of the GNU General
+	Public License as published by the Free Software Foundation, either
+	version 3 of the License, or (at your option) any later version.
+	Jaeksoft OpenSearchServer is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	General Public License for more details. You should have received a
+	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
+	If not, see <http://www.gnu.org/licenses/>.
+-->
 <tabbox>
 	<tabs>
-		<tab id="tabCrawlerWebPattern" label="Pattern list" selected="true" />
+		<tab id="tabCrawlerWebPattern" label="Pattern list"
+			selected="true" />
 		<tab id="tabCrawlerWebUrl" label="Url browser" />
 		<tab id="tabCrawlerWebCrawl" label="Crawl process" />
 		<tab id="tabCrawlerWebMapping" label="Field mapping" />
@@ -9,13 +26,13 @@
 		<tabpanel>
 			<include src="WEB-INF/zul/crawler/web/pattern.zul" />
 		</tabpanel>
-		<tabpanel>
+		<tabpanel fulfill="tabCrawlerWebUrl.onSelect">
 			<include src="WEB-INF/zul/crawler/web/url.zul" />
 		</tabpanel>
-		<tabpanel>
+		<tabpanel fulfill="tabCrawlerWebCrawl.onSelect">
 			<include src="WEB-INF/zul/crawler/web/crawl.zul" />
 		</tabpanel>
-		<tabpanel>
+		<tabpanel fulfill="tabCrawlerWebMapping.onSelect">
 			<include src="WEB-INF/zul/crawler/web/mapping.zul" />
 		</tabpanel>
 	</tabpanels>
