Feature tracker  2812172  : To crawl files

--- a/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
@@ -35,7 +35,7 @@
 							value="@{crawlFileProcess.properties.fetchInterval}" />
 
 						<label
-							value="Delay between each accesses (seconds): " />
+							value="Delay between each accesses (milliseconds): " />
 						<intbox constraint="no empty, no negative"
 							readonly="@{crawlFileProcess.refresh}"
 							value="@{crawlFileProcess.properties.delayBetweenAccesses}" />
