--- a/WebContent/WEB-INF/zul/crawler/file/mappingfile.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/mappingfile.zul
@@ -16,7 +16,7 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="mapping"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.MappingController">
+	use="com.jaeksoft.searchlib.web.controller.crawler.file.MappingFileController">
 	<hbox align="center">
 		<listbox mold="select" model="@{mapping.urlFieldList}"
 			selectedItem="@{mapping.selectedUrlField}">
