--- a/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/crawlfile.zul
@@ -33,7 +33,7 @@
 							value="@{crawlFileProcess.properties.delayBetweenAccessesFile}" />
 							
 						<label
-							value="Number of file to crawl between each add: " />
+							value="Number of files to crawl between each add: " />
 						<intbox constraint="no empty, no negative"
 							readonly="@{crawlFileProcess.refresh}"
 							value="@{crawlFileProcess.properties.indexDocumentBufferSizeFile}" />
@@ -77,13 +77,11 @@
 					<auxheader label="Fetched" align="center"
 						colspan="2" width="60px" />
 					<auxheader label="Parsed" width="40px" />
+				
 					<auxheader align="center" colspan="2"
-						label="New file" width="80px" />
-					<auxheader align="center" colspan="2"
-						label="Updated" width="80px" />
+						label="Added or Updated" width="80px" />
 					<auxheader label="Ignored" width="40px" />
-					<auxheader align="center" colspan="2"
-						label="Deleted" width="80px" />
+				
 					<auxheader align="center" colspan="2"
 						label="File(s)" width="80px" />
 				</auxhead>
@@ -92,13 +90,11 @@
 					<listheader label="Count" width="40px" />
 					<listheader label="Rate" width="40px" />
 					<listheader width="40px" />
-					<listheader label="Pending" width="40px" />
-					<listheader label="Committed" width="40px" />
+					
 					<listheader label="Pending" width="40px" />
 					<listheader label="Committed" width="40px" />
 					<listheader width="40px" />
-					<listheader label="Pending" width="40px" />
-					<listheader label="Committed" width="40px" />
+					
 					<listheader label="Processed" width="40px" />
 					<listheader label="Total" width="40px" />
 				</listhead>
@@ -108,13 +104,11 @@
 					<listcell
 						label="@{stat.fetchRate, converter='com.jaeksoft.searchlib.web.converter.RateConverter'}" />
 					<listcell label="@{stat.parsedCount}" />
-					<listcell label="@{stat.pendingNewUrlCount}" />
-					<listcell label="@{stat.newUrlCount}" />
+				
 					<listcell label="@{stat.pendingUpdatedCount}" />
 					<listcell label="@{stat.updatedCount}" />
 					<listcell label="@{stat.ignoredCount}" />
-					<listcell label="@{stat.pendingDeletedCount}" />
-					<listcell label="@{stat.deletedCount}" />
+					
 					<listcell label="@{stat.urlCount}" />
 					<listcell label="@{stat.urlListSize}" />
 				</listitem>
